--- a/src/css/modules/responsive/_desktop.scss
+++ b/src/css/modules/responsive/_desktop.scss
@@ -111,10 +111,6 @@
     width: 48%;
   }
 
-  .client-logo img {
-    max-height: 100px;
-  }
-
   // ------------------------ Projects ------------------------
   #project-page {
     .project-container {
