--- a/src/css/modules/responsive/_tablet.scss
+++ b/src/css/modules/responsive/_tablet.scss
@@ -221,7 +221,7 @@
   // }
 
   .client-logo img {
-    max-height: 80px;
+    height: 80px;
   }
 
   // ------------------------ Photography ------------------------
